--- a/01-sine-cosine/index.html
+++ b/01-sine-cosine/index.html
@@ -25,7 +25,14 @@
     <tr>
       <td colspan="2" class="description">
         <p>
-          The heart of the matter is that this right-angled triangle your learnt about in school is simply a tool for
+          You may have been taught in school that "sine" or "cosine" are something to do with calculating the angles
+          inside a triangle.
+        </p>
+        <p>
+          Or maybe you were just in the room when mathematics was being taught&hellip;
+        </p>
+        <p>
+          However, the heart of the matter is that this right-angled triangle you learnt about in school is simply a tool for
           understanding rotation and is constructed inside a circle where the triangle's longest side is the circle's
           radius.
         </p>
