--- a/02-phase-shift/index.html
+++ b/02-phase-shift/index.html
@@ -83,7 +83,7 @@
           This is because compared to a sine wave, the cosine wave of the same angle always has a phase shift of 90&deg;.
         </p>
         <p>
-          If we now think of the blue wave above as a cosine wave instead of a sine wave, then we can see that:<br>
+          If we now think of the blue wave above as a sine wave instead of a cosine wave, then we can see that:<br>
           <br>
           `cos(&theta;) = sin(&theta; + 90)`<br>
           or<br>
