--- a/04-non-pythagorean/index.html
+++ b/04-non-pythagorean/index.html
@@ -78,24 +78,22 @@
         <h2>The Origin of a Trigonometric Identity</h2>
         <p>
           Since we have decided to assign this circle a radius (hypotenuse) of one unit, the definitions of
-          <code>sin(&theta;)</code> and <code>cos(&theta;)</code> can be reduced simply to
-          <code>sin(&theta;) = height</code> and <code>cos(&theta;) = width</code>.
+          `sin(&theta;)` and `cos(&theta;)` can be reduced simply to
+          `sin(&theta;)` = height and `cos(&theta;)` = width.
         </p>
         <p>
           This also means that the areas of the various squares shown above will be:
         <ul>
-          <li>The area of the square on the radius (the hypotenuse) is always equal to 1</li>
-          <li>The area of the square opposite the angle is always equal to <code>height<sup>2</sup></code> which is the
-            same as
-            <code>sin(&theta;)<sup>2</sup></code>
+          <li>The square on the radius (hypotenuse) has an area always equal to 1</li>
+          <li>The square opposite the angle has an area equal to the height squared which is the same as
+            `sin(&theta;)^2`
           </li>
-          <li>The area of the square adjacent to the angle is always equal to <code>width<sup>2</sup></code> which is
-            the same as
-            <code>cos(&theta;)<sup>2</sup></code>
+          <li>The square adjacent to the angle has an angle equal to the width squared which is the same as
+            `cos(&theta;)^2`
           </li>
         </ul>
         We now have a simple, visual demonstration of the trigonometric identity
-        <code>sin(&theta;)<sup>2</sup> + cos(&theta;)<sup>2</sup> = 1</code>.
+        `sin(&theta;)^2 + cos(&theta;)^2 = 1`.
         </p>
       </td>
     </tr>
