--- a/05-radians/index.html
+++ b/05-radians/index.html
@@ -17,7 +17,8 @@
       <td class="description">
         <h2>Radians: Another Way To Measure Angles</h2>
         <p>
-          The most widespread way to measure rotation is to use degrees.
+          The most widespread unit for measuring rotation is degrees (indicated by a small circle &deg; written to the
+          top right of a number).
           A full circle is divided into 360 degrees, so a half turn is 180 degrees, and quarter turn is 90 degrees.
         </p>
         <p>
