--- a/06-euler/index.html
+++ b/06-euler/index.html
@@ -39,8 +39,8 @@
               </p>
               <p>
                 Bernoulli was investigating the nature of compound interest and discovered that no matter how many times
-                you calculate compound interest during the year, the original sum (known as the principal) will never
-                grow by more than a factor of 2.718
+                you calculate compound interest during the year, the original sum will never grow by more than a factor
+                of 2.718
               </p>
             </td>
             <td style="vertical-align: top;">
@@ -76,8 +76,9 @@
         </p>
         <ol>
           <li>
-            The capital Greek letter sigma means "summation"; so we immediately know we will
-            have to add up some numbers.</li>
+            The capital Greek letter sigma means "summation"; so we immediately know we will have to add up some
+            numbers.
+          </li>
           <li>
             Below the capital sigma, we can see `n=0` and above, we see the symbol for infinity `oo`.
             This tells us the starting and ending numbers for each term in the series &mdash; which in this case goes on
@@ -85,8 +86,8 @@
           </li>
           <li>
             Next, we see the formula `1/(n!)`<br>
-            This formula tells us how to calculate each term of series: all we have to do is substitute the next value
-            in the sequence for `n`.
+            This formula tells us how to calculate each term in the series: all we have to do is replace `n` with the
+            next value in the sequence.
             So we get the value of the first term by setting `n=0`, then to that, we add the value when `n=1`, then to
             that, we add the value when `n=2`, then `n=3`, then `n=4` and&hellip; You get the idea.
           </li>
