--- a/07-maclaurin/index.html
+++ b/07-maclaurin/index.html
@@ -23,8 +23,8 @@
         <p>
           The formula for calculating `e^x` is an example of a <a href="https://en.wikipedia.org/wiki/Colin_Maclaurin"
             target="_new">Maclaurin</a> series.
-          Many other values can be calculated using a Maclaurin series, but the two that are of particular interest to
-          us are the series for calculating sine and cosine.
+          Many other values can be calculated using a Maclaurin series, but two that are of particular interest to us
+          are the series for calculating sine and cosine.
         </p>
         <table>
           <tr>
