--- a/08-imaginary/index.html
+++ b/08-imaginary/index.html
@@ -30,18 +30,21 @@
           One powerful, but largely unspoken consequence of this approach was the assumption that if you could not draw
           your solution, then there was no solution.
           This is why Greek mathematicians widely rejected the idea that there could be a quantity called `zero`; it
-          just seemed philosophically wrong: after all, how could you draw a line with a length of `zero`?
+          just seemed philosophically wrong: after all, how could non-being be, or more concretely, how could you draw a
+          line with a length of `zero`?
         </p>
         <p>
           Reservations such as these became embedded into European thinking and it took several centuries for them to be
           unlearnt.
-          However, as the Renaissance slowly transformed into the Enlightenment, mathematicians discovered that this new
-          algebraic notation offered a way to express proofs of more abstract concepts far more easily than remaining
-          anchored to the older geometric approach.
+          However, as the Renaissance slowly transformed into the Enlightenment, mathematicians discovered that instead
+          of writing out numerical relationships in words, a new <i>"algebraic"</i> notation offered a way to express
+          relationships in a more compact form that was much easier manipulate.
+          Then once mathematicians got used to using algebra, they foudn their proofs no longer needed to be anchored in
+          geometry.
         </p>
         <h3>Squares and Square Roots</h3>
         <p>
-          When you multiply a number by itself, you said to have "squared" that number.
+          When you multiply a number by itself, you are said to have "squared" that number.
           Reversing this process is called "taking the square root".
           The point here is that when you square any of the normal counting numbers, the answer will always be positive:
         </p>
@@ -68,10 +71,12 @@
         </p>
         <h3>Making the Conceptual Leap</h3>
         <p>
-          The fundamental problem here was a conceptual one &mdash; if I can count to a number, then I can say something
-          like <i>"I have three apples"</i>.
-          The quantity three is a number we can count to.
-          It represents a real, tangible quantity of physical objects.
+          The fundamental problem here was a conceptual one &mdash; if I say something like <i>"I am holding three
+            apples"</i>, then I have made a statement that directly represents a tangible quantity of real-world
+          objects.
+        </p>
+        <p>
+          In other words, a number such as `three` represents a quantity we can count to.
         </p>
         <p>
           But what answer should we write when attempting to calculate `sqrt (-9)`?
@@ -80,17 +85,19 @@
           It's not `+3` and its not `-3`, but a `3` must be involved somewhere &mdash; and herein lies the problem.
         </p>
         <p>
-          <b><i>There is a 3 here, but its not the sort of 3 you can count to.</i></b>
+          <b><i>The answer involves a kind of number you cannot count to.</i></b>
         </p>
         <p>
           If this makes your brain hurt, then don't worry &mdash; you're in good company.
         </p>
         <p>
           Mathematicians found the concept of <i>"a number you cannot count to"</i> deeply perplexing as there is no
-          intuitive way to conceptualise a quantity that has no tangible meaning in the material world.
+          intuitive way to conceptualise such a quantity.
+          After all, what tangible meaning could such a quantity have in the material world?
         </p>
         <p>
-          So what meaning can we give to the statement `sqrt (-9)`?
+          In spite of this profound philosophical problem, the need to answer questions like <i>"What is the value of
+            `sqrt (-9)`?"</i> did not go away.
         </p>
         <p>
           We best we can do is to rewrite `-9` as `9 xx -1`.
@@ -99,9 +106,8 @@
           (-1)` simply won't go away.
         </p>
         <p>
-          What mathematicians struggled to accept was the idea that even though we have this strange, intangible
-          quantity, it is still mathematically useful and relevant (in fact, as Euler later demonstrated, it turned out
-          to be essential).
+          What mathematicians struggled to accept was the idea that this strange, intangible quantity could have any
+          mathematical usefulness (However, as Euler later demonstrated, it turned out to be essential).
         </p>
         <p>
           <a href="https://en.wikipedia.org/wiki/Ren%C3%A9_Descartes" target="_new">Ren&eacute; Descartes</a> was one of
