--- a/10-complex-nums/index.html
+++ b/10-complex-nums/index.html
@@ -40,7 +40,7 @@
               <p>
                 The simplest way to represent the above set of rotating values is to use (X,Y) coordinates like this:
               </p>
-              <table>
+              <table class="eq-sequence">
                 <tr>
                   <td>`i^0 =`</td>
                   <td>`(1,0)`</td>
@@ -77,7 +77,7 @@
         <h3>Cartesian (or Rectangular) Form</h3>
         <p>
           When a complex number is expressed as a pair of values such as `4 + 3i`, we are identifying the point on the
-          complex plane in terms an X,Y pair of coordinates.
+          complex plane in terms of an (X,Y) pair of coordinates.
           In other words `4 + 3i` tells you to <i>"Start at the origin facing east, then take four steps forward, turn
             90&deg; to the left, then take three more steps"</i>.
         </p>
@@ -90,9 +90,9 @@
           Couldn't we just walk in a straight line from the origin directly to the point?
         </p>
         <p>
-          We certainly can, but first we need to know both how far we should walk and in which direction.
-          (The convention here is that 0&deg; is the direction of the positive X axis, and positive rotation is
-          anti-clockwise).
+          We certainly can, but first we need to know both how far we should walk, and second we need to know in which
+          direction. (The convention here is that 0&deg; is the direction of the positive X axis, and positive rotation
+          is anti-clockwise).
         </p>
         <p>
           Starting with the complex number `4 + 3i`, we know this describes a right-angled triangle with a base of
@@ -113,7 +113,7 @@
                 `h = 5`
               </p>
               <p>So, starting from the origin, we know we have to walk for a distance of `5` steps.
-                We should also bear in mind that all the relationships were using here are derived from the angles
+                We should also bear in mind that all the relationships we're using here are derived from the angles
                 formed inside a circle.
                 That means that the `5` steps we will be taking are along the radius of a circle.
               </p>
@@ -172,7 +172,7 @@
           Lastly, we should also note that the angle has been expressed in degrees rather than the more usual radians.
         </p>
         <p>
-          To convert to radians, we must multiply the angle in degrees by `pi` then divide by `180`.
+          To convert degrees to radians, we must multiply the angle in degrees by `pi` then divide by `180`.
         </p>
         <p>
           `(36.87&deg; xx pi)/ 180 = 0.644`
