--- a/11-complex-arith/index.html
+++ b/11-complex-arith/index.html
@@ -45,7 +45,7 @@
         <h3>Subtraction</h3>
         <p>
           Subtracting two complex numbers such as `4 + 3i` and `1 - 2i` is simply a matter of subtracting the second
-          real part from the first real part, then subtracting the second imaginary part from the first.
+          real part from the first real part, then subtracting the second imaginary part from the first imaginary part.
         </p>
         <table class="eq-sequence">
           <tr>
@@ -73,7 +73,7 @@
           <tr>
             <td style="vertical-align: top;">
               <p>
-                FOIL is an acronym that helps you remember the order in which terms are to be multiplied and then added.
+                FOIL is an acronym for <b>F</b>irst, <b>O</b>utside, <b>I</b>nside, <b>L</b>ast that helps you remember the order in which terms are to be multiplied and then added.
               </p>
               <table class="eq-sequence">
                 <tr>
