Correct typos and optimize coding

--- a/09-euler-formula/index.html
+++ b/09-euler-formula/index.html
@@ -25,7 +25,7 @@
           that
           these series are very similar.
         </p>
-        <table>
+        <table class="eq-sequence">
           <tr>
             <td>`e^x`</td>
             <td>`=`</td>
@@ -160,7 +160,6 @@
     </td>
     </tr>
   </table>
-  <script type="text/javascript" src="./main.js"></script>
 </body>
 
 </html>
