--- a/11-complex-arith/index.html
+++ b/11-complex-arith/index.html
@@ -73,7 +73,8 @@
           <tr>
             <td style="vertical-align: top;">
               <p>
-                FOIL is an acronym for <b>F</b>irst, <b>O</b>utside, <b>I</b>nside, <b>L</b>ast that helps you remember the order in which terms are to be multiplied and then added.
+                FOIL is an acronym for <b>F</b>irst, <b>O</b>utside, <b>I</b>nside, <b>L</b>ast that helps you remember
+                the order in which terms are to be multiplied and then added.
               </p>
               <table class="eq-sequence">
                 <tr>
@@ -192,7 +193,7 @@
           <tr>
             <td>`=>`</td>
             <td>`(5 + 10i) / 5`</td>
-            <td>Replace all occurrences of `i^2` with `-1`, then gather the real and imaginary terms</td>
+            <td>Replace all occurrences of `i^2` with `-1` then<br>gather together the real and imaginary terms</td>
           </tr>
           <tr>
             <td>`=>`</td>
