Refactor directory structure

--- a/01-tools/08-imaginary/index.html
+++ b/01-tools/08-imaginary/index.html
@@ -116,14 +116,15 @@
           quantity that appeared to have no direct applicability in the material world.
         </p>
         <p>
-          You can hold `1` apple in your hand, but what does it mean to say <i>"I am holding `sqrt (-1)` apples"</i>?
+          I can hold `1` apple in my hand, but what does it mean to say <i>"I am holding `sqrt (-1)` apples"</i>?
         </p>
         <p>
+          Exactly how many apples is that?
           Can this statement even be considered valid?
         </p>
         <p>
           For a philosopher such as Descartes, the idea that mathematics should contain a type of quantity you cannot
-          count to create deep philosophical problems.
+          count to created a deep philosophical problem.
           So in his frustration (and no doubt, a certain degree of irritation), he gave these numbers the rather
           derogatory title of <a href="https://en.wikipedia.org/wiki/Imaginary_number#History"
             target="_new">"imaginary"</a>
