--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <h2>Understanding the Tools</h2>
   <ol>
     <li>
-      <h3><a href="./01-sine-cosine/index.html">Where Do Sine and Cosine Waves Come From?</a></h3>
+      <h3><a href="./01-tools/01-sine-cosine/index.html">Where Do Sine and Cosine Waves Come From?</a></h3>
       <p>
         You were probably taught in school that the trigonometric functions such as sine, cosine and tangent
         describe the relationship between the angles and the lengths of the sides in a right-angled triangle.
@@ -24,7 +24,7 @@
       </p>
     </li>
     <li>
-      <h3><a href="./02-phase-shift/index.html">Phase and Phase Shift</a></h3>
+      <h3><a href="./01-tools/02-phase-shift/index.html">Phase and Phase Shift</a></h3>
       <p>
         In the previous example, you probably noticed that a sine wave and a cosine wave have exactly the same
         shape.<br>
@@ -33,15 +33,15 @@
       </p>
     </li>
     <li>
-      <h3><a href="./03-amplitude/index.html">Amplitude</a></h3>
+      <h3><a href="./01-tools/03-amplitude/index.html">Amplitude</a></h3>
       <p>
         We have already spoken about two of a wave's three fundamental properties: frequency and phase.
         Now we'll look at the third fundamental property, amplitude.
       </p>
     </li>
     <li>
-      <h3><a href="./04-non-pythagorean/index.html">The Non-Pythagorean Theorem</a></h3>
-      <p align="center">
+      <h3><a href="./01-tools/04-non-pythagorean/index.html">The Non-Pythagorean Theorem</a></h3>
+      <p style="text-align: center;">
         <i>"The area of the square on the hypotenuse is equal to<br>the sum of the areas of the squares on the other two
           sides"</i>
       </p>
@@ -54,14 +54,14 @@
       </p>
     </li>
     <li>
-      <h3><a href="./05-radians/index.html">Radians: Another Way To Measure Angles</a></h3>
+      <h3><a href="./01-tools/05-radians/index.html">Radians: Another Way To Measure Angles</a></h3>
       <p>
         We are used to measuring angles in degrees, but in physics and engineering, another unit of rotation is used
         called the radian.
       </p>
     </li>
     <li>
-      <h3><a href="./06-euler/index.html">Euler's Number</a></h3>
+      <h3><a href="./01-tools/06-euler/index.html">Euler's Number</a></h3>
       <p>
         In addition to `pi`, there's another mathematical constant that keeps popping up (sometimes when you least
         expect it) called `e`.
@@ -73,7 +73,7 @@
       </p>
     </li>
     <li>
-      <h3><a href="./07-maclaurin/index.html">Maclaurin Series</a></h3>
+      <h3><a href="./01-tools/07-maclaurin/index.html">Maclaurin Series</a></h3>
       <p>
         The infinite series used to calculate `e^x` is an example of a <a
           href="https://en.wikipedia.org/wiki/Colin_Maclaurin" target="_new">Maclaurin</a> series.
@@ -82,7 +82,7 @@
       </p>
     </li>
     <li>
-      <h3><a href="./08-imaginary/index.html">Imaginary Numbers</a></h3>
+      <h3><a href="./01-tools/08-imaginary/index.html">Imaginary Numbers</a></h3>
       <p>
         When you multiply a number by itself, you are "squaring" that number.
         Reversing this process is called "taking the square root".
@@ -94,7 +94,7 @@
       </p>
     </li>
     <li>
-      <h3><a href="./09-euler-formula/index.html">Euler's Formula and Identity</a></h3>
+      <h3><a href="./01-tools/09-euler-formula/index.html">Euler's Formula and Identity</a></h3>
       <p>
         We will now combine what we've learnt about using Maclaurin series to express the values of `e^x`,
         `sin(&theta;)` and `cos(&theta;)`, with what we've learnt about the cycle of values created we raising `i` to
@@ -102,19 +102,33 @@
       </p>
     </li>
     <li>
-      <h3><a href="./10-complex-nums/index.html">Complex Numbers</a></h3>
+      <h3><a href="./01-tools/10-complex-nums/index.html">Complex Numbers</a></h3>
       <p>
-        Now that we have encountered this <i>strange-but-very-important-number-that-you-cannot-count-to</i> called `i` or `sqrt
+        Now that we have encountered this <i>strange-but-very-important-number-that-you-cannot-count-to</i> called `i`
+        or `sqrt
         (-1)`, we need to look at performing arithmetic using `i`.
       </p>
     </li>
     <li>
-      <h3><a href="./11-complex-arith/index.html">Arithmetic with Complex Numbers</a></h3>
+      <h3><a href="./01-tools/11-complex-arith/index.html">Arithmetic with Complex Numbers</a></h3>
       <p>
         We will now take a look at performing arithmetic using complex numbers.
       </p>
     </li>
   </ol>
+
+  <!-- <h2>The Fourier Series</h2>
+  <ol>
+    <li>
+      <h3><a href="./02-fs/01-sine-cosine/index.html">Where Do Sine and Cosine Waves Come From?</a></h3>
+      <p>
+        You were probably taught in school that the trigonometric functions such as sine, cosine and tangent
+        describe the relationship between the angles and the lengths of the sides in a right-angled triangle.
+        Whilst this explanation is perfectly correct, it doesn't quite get down to the heart of the matter.
+      </p>
+    </li>
+  </ol> -->
+
 </body>
 
 </html>
