Add convolution intro page

--- a/01-tools/02-phase-shift/index.html
+++ b/01-tools/02-phase-shift/index.html
@@ -44,25 +44,27 @@
         </p>
         <p>
           How far up or down a wave is in this cycle is known as the wave's <a
-            href="https://en.wikipedia.org/wiki/Phase_(waves)" targe="_new">phase</a>
+            href="https://en.wikipedia.org/wiki/Phase_(waves)" targe="_new">phase</a>, and when two waves of the same
+          frequency do not line up with each other, that difference isknown as <b>phase shift</b>.
         </p>
-        <h2>Phase Shift as Degrees</h2>
+
+        <h2>Visualising Phase Shift</h2>
         <p>
-          If we take the horizontal and vertical graphs from the first lesson and lay them on top of each other, we'll
-          get the graph shown below, where the green wave is the sine and the blue wave is the cosine.
-        </p>
-        <p>
-          Notice that the sine wave first crosses the X axis at 0&deg;, but the cosine wave crosses the X axis at
-          90&deg;.
-          So we can say that the cosine wave is offset from the sine wave by 90&deg;.
+          In the graph below, we have two waves of the same frequency.
+          This means that both waves rise and fall at exactly the same rate, but not necessarily at the same time.
+          By adjusting the phase shift silder, you can control the degree of alignment.
         </p>
         <p>
-          This offset is known as a "phase shift".
+          Move the slider over to the far left.
+          Now the two waves rise and fall exactly in sync with each other, so they are said to be <b>in phase</b>.
         </p>
         <p>
-          Below, we can see two sine waves that are offset from each other by 90&deg;.
-          By moving the slider left and right, you can see how the phase of the blue wave changes in relation to the
-          green wave.
+          As you move the slider towards the right, you are altering the phase shift of one of the waves and their
+          rising and falling no longer lines up &mdash; They are now said to be <b>out of phase</b>.
+        </p>
+        <p>
+          When the phase slider shows 180&deg;, the two waves are now rising and falling in exact opposition to each
+          other &mdash; they are now said to be in <b>anti-phase</b>.
         </p>
       </td>
     </tr>
@@ -73,14 +75,23 @@
     </tr>
     <tr>
       <td colspan="2" class="description">
+        <h2>Phase Relationship Between Sine and Cosine</h2>
         <p>
-          But just a minute&hellip; &nbsp;The blue "sine" wave looks exactly like the cosine wave we saw on the previous
-          graph&hellip;
+          If we rotate the vertical cosine graph from the first lesson anti-clockwise by 90&deg;, then lay it on top of
+          the horizontal sine graph, we'll get the graph shown below, where the green wave is the sine and the blue wave
+          is the cosine.
         </p>
         <p>
-          If you move the slider over to the far left, then you can see that the blue wave now lines up exactly with the
+          Notice that the sine wave first crosses the X axis at 0&deg;, but the cosine wave crosses the X axis at
+          90&deg;.
+          So we can say that the cosine wave is offset from the sine wave by 90&deg;.
+        </p>
+        <p>
+          By moving the slider left and right, you can see how the phase of the blue wave changes in relation to the
           green wave.
-          This is because compared to a sine wave, the cosine wave of the same angle always has a phase shift of 90&deg;.
+        </p>
+        <p>
+          Compared to a sine wave, a cosine wave of the same frequency has a phase shift of 90&deg;.
         </p>
         <p>
           If we now think of the blue wave above as a sine wave instead of a cosine wave, then we can see that:<br>
