--- a/index.html
+++ b/index.html
@@ -117,17 +117,24 @@
     </li>
   </ol>
 
-  <!-- <h2>The Fourier Series</h2>
+  <h2>The Fourier Series</h2>
   <ol>
     <li>
-      <h3><a href="./02-fs/01-sine-cosine/index.html">Where Do Sine and Cosine Waves Come From?</a></h3>
+      <h3><a href="./02-fs/01-convolution-intro/index.html">Convolution</a></h3>
       <p>
-        You were probably taught in school that the trigonometric functions such as sine, cosine and tangent
-        describe the relationship between the angles and the lengths of the sides in a right-angled triangle.
-        Whilst this explanation is perfectly correct, it doesn't quite get down to the heart of the matter.
+        The technical definition of convolution is the process of combining two functions such that their output is the
+        result of a third function.
+      </p>
+      <p>
+        As a the general definition, this is perfectly correct, but from a practical perspective, it is not immediately
+        easy to see how it will be helpful to us.
+      </p>
+      <p>
+        This process is of fundamental importance when trying to discover what individual frequencies exist within a
+        complicated signal.
       </p>
     </li>
-  </ol> -->
+  </ol>
 
 </body>
 
