--- a/index.html
+++ b/index.html
@@ -122,16 +122,8 @@
     <li>
       <h3><a href="./02-fs/01-convolution-intro/index.html">Convolution</a></h3>
       <p>
-        The technical definition of convolution is the process of combining two functions such that their output is the
-        result of a third function.
-      </p>
-      <p>
-        As a the general definition, this is perfectly correct, but from a practical perspective, it is not immediately
-        easy to see how it will be helpful to us.
-      </p>
-      <p>
-        This process is of fundamental importance when trying to discover what individual frequencies exist within a
-        complicated signal.
+        Convolution is a process of fundamental importance as it helps us to discover the individual frequencies from
+        which a signal is composed.
       </p>
     </li>
   </ol>
