Correct more typos and reword

--- a/01-tools/11-complex-arith/index.html
+++ b/01-tools/11-complex-arith/index.html
@@ -20,9 +20,20 @@
     <tr>
       <td class="description">
         <h2>Arithmetic with Complex Numbers</h2>
+        <p>
+          Let's face it, many of our familiar arithmetic operations such as addition or division simply break when we
+          try to calculate an exact value for statements such as `1 + sqrt (-1)` or `3 / (sqrt (-1))`.
+        </p>
+        <p>
+          The only operation that can begin to handle `sqrt (-1)` is multiplication, but even then, we can only fully
+          calculate values that multiply an even number of `i`'s together.
+        </p>
+        <p>
+          In spite of these limitations, we still need to know how to perform arithmetic using complex numbers.
+        </p>
         <h3>Addition</h3>
         <p>
-          Adding two complex numbers such as `4 + 3i` and `1 - 2i` is simply a matter of adding the real parts together,
+          Adding two complex numbers such as `(4 + 3i)` and `(1 - 2i)` is simply a matter of adding the real parts together,
           then adding the imaginary parts.
         </p>
         <table class="eq-sequence">
@@ -44,7 +55,7 @@
 
         <h3>Subtraction</h3>
         <p>
-          Subtracting two complex numbers such as `4 + 3i` and `1 - 2i` is simply a matter of subtracting the second
+          Subtracting two complex numbers such as `(4 + 3i)` and `(1 - 2i)` is simply a matter of subtracting the second
           real part from the first real part, then subtracting the second imaginary part from the first imaginary part.
         </p>
         <table class="eq-sequence">
@@ -66,7 +77,7 @@
 
         <h3>Multiplication</h3>
         <p>
-          Multiplying two complex numbers such `4 + 3i` and `1 - 2i` is a little more involved because we must follow
+          Multiplying two complex numbers such `(4 + 3i)` and `(1 - 2i)` is a little more involved because we must follow
           the FOIL rule.
         </p>
         <table>
@@ -108,17 +119,22 @@
 
         <h3>Division</h3>
         <p>
-          The basic problem with complex division is that our rules of arthmetic do not tell us how many times `sqrt
-          (-1)` divides into a real number.
+          The basic problem with complex division is that our rules of arthmetic are unable to tell us how many times
+          `sqrt (-1)` divides into a real number.
           So if we encounter a term such as `3/(2i)`, then we're completely stuck.
-          Like Descartes all those years ago, we're stuck with a pesky `sqrt (-1)` and can go no further.
+        </p>
+        <p>
+          Like Descartes all those years ago, we can't seem to make that pesky `sqrt (-1)` go away.
+        </p>
+        <p>
+          Or can we?
         </p>
         <p>
           The trick here is to perform the division in such a way that we are left only with a real value in the
           denominator.
         </p>
         <p>
-          But if we have a division such as `(4 + 3i)/(2-i)`, how do we go about getting rid of the `-i` in `2-i`?
+          But if we have a division such as `(4 + 3i)/(2-i)`, how do we go about getting rid of the `-i` in `(2-i)`?
         </p>
         <h4>The Complex Conjugate</h4>
         <p>
@@ -126,10 +142,10 @@
           And it is formed simply by reversing the sign of the imaginary term.
         </p>
         <p>
-          So the complex conjugate of `3+4i` is `3-4i`.
+          So the complex conjugate of `(3+4i)` is simply `(3-4i)`.
         </p>
         <p>
-          Let's see what happens when we multiply `3+4i` by its conjugate `3-4i`
+          Let's see what happens when we multiply `(3+4i)` by its conjugate `(3-4i)`
         </p>
         <p>
           By applying the FOIL rule, we get:
@@ -183,7 +199,7 @@
           <tr>
             <td>`=>`</td>
             <td>`((4+3i) xx (2+i)) / 5`</td>
-            <td>Reduce the denominator to a real number</td>
+            <td>Apply the FOIL rule to the denominator &mdash; which reduces it to a real number</td>
           </tr>
           <tr>
             <td>`=>`</td>
@@ -193,7 +209,7 @@
           <tr>
             <td>`=>`</td>
             <td>`(5 + 10i) / 5`</td>
-            <td>Replace all occurrences of `i^2` with `-1` then<br>gather together the real and imaginary terms</td>
+            <td>Replace all occurrences of `i^2` with `-1` then gather together the real and imaginary terms</td>
           </tr>
           <tr>
             <td>`=>`</td>
