--- a/index.html
+++ b/index.html
@@ -86,33 +86,37 @@
       <p>
         When you multiply a number by itself, you are "squaring" that number.
         Reversing this process is called "taking the square root".
-        The point here is that when you square any of the normal counting numbers, the answer will always be positive:
+        The point here is that when you square any of the normal counting numbers, the answer will always be positive.
       </p>
       <p>
         But what happens if you need to find the square root of a negative number?
-        Its seems that this simple question causes mathematics to break.
+      </p>
+      <p>
+        For a long time, it was believed that this simple question caused our understanding of arithmetic to break.
       </p>
     </li>
     <li>
       <h3><a href="./01-tools/09-euler-formula/index.html">Euler's Formula and Identity</a></h3>
       <p>
-        We will now combine what we've learnt about using Maclaurin series to express the values of `e^x`,
-        `sin(&theta;)` and `cos(&theta;)`, with what we've learnt about the cycle of values created we raising `i` to
-        various integer powers to derive firstly, Euler's Formula, and secondly, Euler's famous Identity.
+        We've learnt that values such as `e^x`, `sin(&theta;)` and `cos(&theta;)` can all be derived from a family of
+        infinite series known as the Maclaurin series.
+        We will now combine this knowledge with what we've learnt about the cycle of values created when raising `i` to
+        various integer powers.
+        From this, we will then be able to derive firstly, Euler's Formula, and secondly, Euler's famous Identity.
       </p>
     </li>
     <li>
       <h3><a href="./01-tools/10-complex-nums/index.html">Complex Numbers</a></h3>
       <p>
-        Now that we have encountered this <i>strange-but-very-important-number-that-you-cannot-count-to</i> called `i`
-        or `sqrt
-        (-1)`, we need to look at performing arithmetic using `i`.
+        We have now discovered that `sqrt (-1)` is this <i>strange-but-important-number-we-cannot-count-to</i>.
+        When we now combine this value (called `i`) with a real number, then we get something called a <b>complex
+          number</b>.
       </p>
     </li>
     <li>
       <h3><a href="./01-tools/11-complex-arith/index.html">Arithmetic with Complex Numbers</a></h3>
       <p>
-        We will now take a look at performing arithmetic using complex numbers.
+        Next, we will look at performing arithmetic using complex numbers.
       </p>
     </li>
   </ol>
