--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   <h2>The Fourier Series</h2>
   <ol>
     <li>
-      <h3><a href="./02-fs/01-convolution-intro/index.html">Convolution</a></h3>
+      <h3><a href="./02-fs/01-convolution-intro/index.html">Introduction to Convolution</a></h3>
       <p>
         Convolution is a process of fundamental importance as it helps us to discover the individual frequencies from
         which a signal is composed.
